# smo-online-server

./: .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitignore  Cargo.toml  Dockerfile  build.rs  readme.md
.github/workflows/: cd.yml
docs/: connect.md
src/: commands.rs  game.rs  main.rs  packet.rs  peer.rs  player.rs  players.rs  server.rs  settings.rs
