[package]
name = "smo-online-server"
authors = ["Jules Guesnon"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/JulesGuesnon/smo-online-server"
keywords = ["mario", "smo", "online", "server"]
categories = ["game"]
readme = "readme.md"
description = """
A server to player Super Mario Odyssey online
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3.21"
tracing = "0.1"
tracing-subscriber = "0.2"
uuid = {version = "1.1.2", features = ["v4", "serde"] }
bytes = "1.2.0"
anyhow = "1.0.58"
chrono = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glam = "0.21.2"
colored = "2.0.0"