[package]
name = "smo-online-server"
authors = ["Jules Guesnon"]
version = "0.2.0"
edition = "2021"
repository = "https://github.com/JulesGuesnon/smo-online-server"
keywords = ["mario", "smo", "online", "server"]
categories = ["game"]
readme = "readme.md"
description = """
A server to play Super Mario Odyssey online
"""

[dependencies]
bytes = "1.2.1"
chrono = "0.4.20"
color-eyre = "0.6.2"
futures = "0.3.21"
glam = "0.21.3"
owo-colors = "3.4.0"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
tokio = { version = "1.20.1", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "fmt"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }

